[gd_scene load_steps=8 format=2]

[ext_resource path="res://Main_font.tres" type="DynamicFont" id=1]
[ext_resource path="res://Forms/ResultRow.gd" type="Script" id=2]
[ext_resource path="res://Source/Button/btn_small_dark.png" type="Texture" id=3]
[ext_resource path="res://Source/Button/btn_small.png" type="Texture" id=4]
[ext_resource path="res://Source/Button/btn_small_light.png" type="Texture" id=5]
[ext_resource path="res://Source/OpenSans-Bold.ttf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=1]
size = 36
font_data = ExtResource( 6 )

[node name="Header" type="Control"]
margin_right = 950.0
margin_bottom = 50.0
rect_min_size = Vector2( 950, 50 )
script = ExtResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_bottom = 1.0
margin_right = 950.0

[node name="NumberRow" type="Control" parent="HBoxContainer"]
margin_right = 50.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )

[node name="Label" type="Label" parent="HBoxContainer/NumberRow"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -10.0
margin_bottom = 10.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 1 )
text = "№"
align = 1
valign = 1

[node name="NameRow" type="Control" parent="HBoxContainer"]
margin_left = 54.0
margin_right = 254.0
margin_bottom = 50.0
rect_min_size = Vector2( 200, 50 )

[node name="Label" type="Label" parent="HBoxContainer/NameRow"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -10.0
margin_bottom = 10.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 1 )
text = "ФИО"
align = 1
valign = 1

[node name="AgeRow" type="Control" parent="HBoxContainer"]
margin_left = 258.0
margin_right = 308.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )

[node name="Label" type="Label" parent="HBoxContainer/AgeRow"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -10.0
margin_bottom = 10.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 1 )
text = "Age"
align = 1
valign = 1

[node name="DateRow" type="Control" parent="HBoxContainer"]
margin_left = 312.0
margin_right = 512.0
margin_bottom = 50.0
rect_min_size = Vector2( 200, 50 )

[node name="Label" type="Label" parent="HBoxContainer/DateRow"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -10.0
margin_bottom = 10.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 1 )
text = "Дата"
align = 1
valign = 1

[node name="ResultRow" type="Control" parent="HBoxContainer"]
margin_left = 516.0
margin_right = 716.0
margin_bottom = 50.0
rect_min_size = Vector2( 200, 50 )

[node name="Label" type="Label" parent="HBoxContainer/ResultRow"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -10.0
margin_bottom = 10.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 1 )
text = "Результат"
align = 1
valign = 1

[node name="Variable" type="Control" parent="HBoxContainer"]
margin_left = 720.0
margin_right = 920.0
margin_bottom = 50.0
rect_min_size = Vector2( 200, 50 )

[node name="ButtonBack" type="TextureButton" parent="HBoxContainer/Variable"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -59.0
margin_top = -16.0
margin_right = 180.0
margin_bottom = 44.0
rect_scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 5 )
expand = true

[node name="ButtonName" type="Label" parent="HBoxContainer/Variable/ButtonBack"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -83.5
margin_top = -27.5
margin_right = 83.5
margin_bottom = 27.5
custom_colors/font_color = Color( 0.733333, 0.231373, 0.054902, 1 )
custom_fonts/font = SubResource( 1 )
text = "Открыть"
__meta__ = {
"_edit_lock_": true
}

[node name="Label" type="Label" parent="HBoxContainer/Variable"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -10.0
margin_bottom = 10.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 1 )
text = "Варианты действий"
align = 1
valign = 1

[connection signal="pressed" from="HBoxContainer/Variable/ButtonBack" to="." method="_on_ButtonBack_pressed"]
